# CodeFuse-Query

./: .bazelrc  .bazelversion  .gitignore  .gitmodules  BUILD  README.md  README_cn.md  README_zh.md  WORKSPACE  deps.bzl  junit5.bzl  visibility.bzl
.devcontainer/: devcontainer.json
.github/workflows/: bazel_cli_build.yml  check_gdl_workflow.yml  godel_build.yml  pages.yml
cli/: BUILD.bazel  requirements.txt  sparrow  sparrow-cli.py  sparrow-cli.spec
cli/database/: create.py
cli/extractor/: extractor.py
cli/godel/: godel_compiler.py
cli/package/: compile_and_run.py  create.py  manifest.py  pack.py
cli/query/: run.py
cli/rebuild/: lib.py
cli/run/: runner.py
cli/sparrow_schema/: schema.py
doc/: 1_abstract.en.md  1_abstract.md  2_introduction.en.md  2_introduction.md  2_toolchain.md  3_install_and_run.en.md  3_install_and_run.md  4_godelscript_language.en.md  4_godelscript_language.md  5_toolchain.en.md  5_toolchain.md  6_coref_library.md  _config.yml  coref_library_reference.md  index.md  user_case.en.md  user_case.md
doc/tools/: build.py  generate_coref_library.py  generate_markdown.py
example/CodeFuse/: CommentCodePairsGo.gdl  CommentCodePairsJava.gdl  CommentCodePairsJavaScript.gdl  CommentCodePairsPython.gdl  CommentRatioJava.gdl  CyclomaticComplexityJava.gdl  Fan-InJava.gdl  Fan-OutJava.gdl  GetImportSpringFrameworkFileJava.gdl  GetTotalNumberOfLinesOfCodeJava.gdl
example/go/: CyclomaticComplexity.gdl  FileInfo.gdl  FunctionComment.gdl
example/icse25/: motivation example.md  procedure.md
example/java/: CallChain.gdl  CallChainWithPathFilter.gdl  CallChainWithSignature.gdl  ClassHierarchy.gdl  ClassMethods.gdl  GetMybatisDOClass.gdl  GetSignature.gdl  UnusedMethod.gdl
example/javascript/: ASTPrint.gdl  ChangeEffect.gdl  CyclomaticComplexity.gdl
example/python/: ASTPrint.gdl  CyclomaticComplexity.gdl  DocumentedPercentage.gdl  MethodComment.gdl
example/query/: hello.gdl
example/xml/: GetBean.gdl  POM.gdl  RPC.gdl
godel-script/: .gitignore  CMakeLists.txt  README.md
godel-script/docs/: syntax.md
godel-script/docs/language-reference/: databases.md  enums.md  functions.md  impl.md  import.md  program.md  queries.md  schemas.md  type.md
godel-script/godel-backend/: .gitignore  0001-init-self-used-souffle-from-public-souffle.patch
godel-script/godel-backend/extension/: CMakeLists.txt  library.cpp
godel-script/godel-frontend/src/: cli.cpp  cli.h  engine.cpp  engine.h  lexer.cpp  lexer.h  main.cpp  parse.cpp  parse.h  semantic.cpp  semantic.h  symbol.cpp  symbol.h
godel-script/godel-frontend/src/ast/: ast_dumper.cpp  ast_dumper.h  ast_node.h  ast_root.cpp  ast_root.h  ast_visitor.cpp  ast_visitor.h  decl.cpp  decl.h  expr.cpp  expr.h  stmt.cpp  stmt.h  template_extractor.cpp  template_extractor.h
godel-script/godel-frontend/src/error/: error.cpp  error.h
godel-script/godel-frontend/src/ir/: aggregator_inline_remark.cpp  aggregator_inline_remark.h  call_graph.cpp  call_graph.h  flatten_block.cpp  flatten_block.h  inst_combine.cpp  inst_combine.h  ir_context.cpp  ir_context.h  ir_gen.cpp  ir_gen.h  lir.cpp  lir.h  name_mangling.cpp  name_mangling.h  pass.cpp  pass.h  pass_manager.cpp  pass_manager.h  remove_unused.cpp  remove_unused.h  reorder.cpp  reorder.h
godel-script/godel-frontend/src/package/: module_tree.cpp  module_tree.h  package.cpp  package.h
godel-script/godel-frontend/src/sema/: annotation_checker.cpp  annotation_checker.h  context.cpp  context.h  data_structure_construct.cpp  data_structure_construct.h  fact_statement_checker.cpp  fact_statement_checker.h  function_declaration.cpp  function_declaration.h  global_symbol_loader.cpp  global_symbol_loader.h  inherit_schema.cpp  inherit_schema.h  self_reference_check.cpp  self_reference_check.h  symbol_import.cpp  symbol_import.h  ungrounded_checker.cpp  ungrounded_checker.h
godel-script/godel-frontend/src/util/: util.cpp  util.h
language/: BUILD
language/arkts/: BUILD
language/cfamily/extractor/: .clang-format  .clang-tidy  .gitignore  BUILD  CMakeLists.txt  README.md  README_cn.md  coref_er_diagram.puml  dev.Dockerfile  main.cpp
language/cfamily/extractor/AST/: ASTUtil.cpp  ASTUtil.hpp  CorefASTConsumer.hpp  CorefASTFrontendAction.hpp  CorefASTVisitor.cpp  CorefASTVisitor.hpp  CorefOptionsParser.cpp  CorefOptionsParser.hpp  SymbolNameGenerator.cpp  SymbolNameGenerator.hpp
language/cfamily/extractor/Cmake/: cxx-dev-tools.cmake
language/cfamily/extractor/Coref/: CorefDef.hpp  CorefUri.cpp  CorefUri.hpp  SignatureGenerator.cpp  SignatureGenerator.hpp
language/cfamily/extractor/Coref/Utils/: Hash.cpp  Hash.hpp  Switcher.h
language/cfamily/extractor/Model/: Models.hpp  Models.hpp.j2
language/cfamily/extractor/Storage/: CMakeLists.txt  Storage.hpp  Storage.hpp.j2  StorageFacade.cpp  StorageFacade.hpp
language/cfamily/extractor/Tests/: CMakeLists.txt  ClassTest.cpp  Common.cpp  Common.hpp  IfStmtTest.cpp  SymbolNameTest.cpp  TypeTest.cpp
language/cfamily/extractor/Tests/Samples/: ClassSample.cpp  ClassSample2.cpp  IfElseStmtSample.cpp  IfStmtSample.cpp  ObjCClassDependencySample1.m  ObjCClassSample.m  ObjCSymbolSample.m  TypeSample.cpp
language/cfamily/extractor/Tools/: generate_headers.py  requirements.txt
language/go/extractor/src/cli/: BUILD.bazel  extractor_cli.go  helper.go
language/go/extractor/src/core/: BUILD.bazel  extract_file.go  extract_mod.go  extract_pkg.go  extraction.go  label.go  profile.go
language/go/extractor/src/orm/: BUILD.bazel  data_decl.go  data_types.go  db_model.go  db_writer.go
language/go/extractor/src/util/: BUILD.bazel  setup.go  util.go  util_test.go
language/javascript/: BUILD
language/properties/: BUILD
language/python/: BUILD
language/sql/: BUILD
tool/aci/: check_gdl.sh
tool/build-utils/: pack_libs.py  upload.sh
tool/build_rule/: pkg_cache.BUILD
tutorail/: README.md
tutorail/notebook/: go_analysis.ipynb
tutorial/: README.en.md  README.md
tutorial/notebook/: go_analysis.ipynb  java_analysis.ipynb  javascript_analysis.ipynb  python_analysis.ipynb  xml_analysis.ipynb
(+4263 files in other folders)
