load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cli_lib",
    srcs = [
        "extractor_cli.go",
        "helper.go",
    ],
    importpath = "alipay.com/code_insight/coref-go-extractor/src/cli",
    visibility = ["//visibility:private"],
    deps = [
        "//language/go/extractor/src/config",
        "//language/go/extractor/src/core",
        "//language/go/extractor/src/util",
        "@org_golang_x_mod//semver",
    ],
)

go_binary(
    name = "cli",
    embed = [":cli_lib"],
    visibility = ["//visibility:public"],
)
